Fri Jan  1 00:47:57 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_instance_method_unimpl): Suppress
	  compiler warnings.

Fri Jan  1 00:36:55 2010  Akinori MUSHA  <knu@iDaemons.org>

	* string.c: Add instance methods to Symbol: succ, next, <=>,
	  casecmp, =~, [], slice, length, size, empty?, match, upcase,
	  downcase, capitalize and swapcase. [backport from 1.9]

Fri Jan  1 00:33:13 2010  Akinori MUSHA  <knu@iDaemons.org>

	* parse.y (dsym): Allow empty symbols. [merge from 1.9]

Fri Jan  1 00:12:52 2010  Akinori MUSHA  <knu@iDaemons.org>

	* object.c, intern.h: Export rb_sym_to_s.

Thu Dec 31 23:41:48 2009  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c: Remove a duplicated declaration.

Thu Dec 31 18:16:51 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c: include addrinfo.h only when using our own
	  getaddrinfo.c.

Thu Dec 31 05:56:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/extconf.rb: fix for wide-getaddrinfo option.

	* ext/socket/addrinfo.c: rename {addr,name}info functions to ensure
	  those are used on darwin.

Thu Dec 31 01:58:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: fix for extstatic.

Tue Dec 29 11:20:41 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/delegate.rb (marshal_dump/load): Revert r26122, r26194, as per
	  Nobu. [ruby-core:24211]

Tue Dec 29 10:36:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rexml/parsers/baseparser.rb (REXML::Parsers::BaseParser::STANDALONE):
	  any number spaces can be placed between equal-sign and the value.
	  patch from Ed Howland in [ruby-core:27345].

Mon Dec 28 22:01:58 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/ruby/test_marshal.rb: added tests for taintness propagation.

Thu Dec 24 12:08:00 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/delegate.rb (marshal_dump/load): dump & load instance variables
	  by default [ruby-core:24211]
